# tax-concierge-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  DESIGN.md  Dockerfile  Makefile  README.md  agents-cli-manifest.yaml  deployment_metadata.json  pyproject.toml  threat_model.md
.codex/: hooks.json
app/: agent.py
submission_frontend/: .dockerignore  main.py  pyproject.toml
submission_frontend/frontend/: package.json  vite.config.ts
submission_frontend/frontend/src/: App.tsx  main.tsx  styles.css
submission_frontend/frontend/src/components/: Registry.tsx
submission_frontend/frontend/src/lib/: a2ui.ts  api.ts  types.ts
tax-concierge-agent/: .env.example  .gitignore  .semgrepignore  PRODUCT.md  README.md  agents-cli-manifest.yaml  deployment_metadata.json  pyproject.toml  threat_model.md
tax-concierge-agent/.impeccable/: design.json
tax-concierge-agent/app/: agent.py  fast_api_app.py
tax-concierge-agent/submission_frontend/: Dockerfile  main.py
tax-concierge-agent/tax_concierge_agent/: .pre-commit-config.yaml  agent.py  config.py  events.py  models.py  routing.py  service.py
tax_concierge_agent/: agent.py  agent_runtime_app.py  events.py  models.py  security.py
tax_concierge_agent/app_utils/: telemetry.py  typing.py
tax_concierge_agent/tests/: test_agent.py
tests/eval/: eval_config.yaml  generate_traces.py  grade_traces.py
tests/integration/: test_agent_runtime_app.py  test_ambient_service.py  test_server_e2e.py
tests/local_events/: ambient_user_story_submitted.json  prompt_injection_story.json  spouse_llc_story.json  (+2 more)
(+35 files in other folders)
