[project]
name = "tax-concierge-submission-frontend"
version = "0.1.0"
description = "Standalone premium FastAPI frontend for the Tax Concierge A2UI intake workflow."
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.138.0,<1.0.0",
    "uvicorn>=0.49.0,<1.0.0",
    "google-adk>=2.0.0,<3.0.0",
    "google-cloud-aiplatform[agent-engines]>=1.156.0",
    "python-multipart>=0.0.20,<1.0.0",
    "pydantic>=2.10.0,<3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["main.py"]
